Add device address, ping interval, and agent ID field in configuration
Signed-off-by: Jihun Ha <jihun.ha@samsung.com>

--- a/src/controller/configuration/configuration.json
+++ b/src/controller/configuration/configuration.json
@@ -7,5 +7,8 @@
 	"serialnumber"   : "Serial number",
 	"platform"       : "Platform name and version",
 	"os"             : "Operationg system name and version",
-	"location"       : "Human readable location"
+	"location"       : "Human readable location",
+	"pinginterval"   : "10(in minute)",
+	"deviceaddress"  : "Device IP address (e.g. 192.168.0.10)",
+	"agentid"        : "Pharos Agent ID"
 }
