--- a/src/controller/configuration/configuration.json
+++ b/src/controller/configuration/configuration.json
@@ -10,5 +10,5 @@
 	"location"       : "Human readable location",
 	"pinginterval"   : "10(in minute)",
 	"deviceaddress"  : "Device IP address (e.g. 192.168.0.10)",
-	"agentid"        : "Pharos Agent ID"
+	"nodeid"        : "Pharos Node ID"
 }
