--- a/doc/pharos_node_api.yaml
+++ b/doc/pharos_node_api.yaml
@@ -4,7 +4,7 @@ info:
   description: >-
     This is a description of Pharos Node API which is called by Pharos Anchor.  
 
-    The Pharos Node interacts with the Pharos Anchor and enables the
+    Pharos Node interacts with Pharos Anchor and enables
     distribution and control of microservices on an app-by-app basis.
 
     In addition, It provides resource information API.
@@ -29,7 +29,7 @@ paths:
       tags:
         - InfoCollecting
       description: >-
-        Returns the device information (os, processor model name,
+        Returns device information (os, processor model name,
         cpu/memory/disk usage).
       consumes:
         - application/json
@@ -44,7 +44,7 @@ paths:
     post:
       tags:
         - InfoCollecting
-      description: 'Returns the device cpu, memory, disk usage information.'
+      description: 'Returns device cpu, memory, disk usage information.'
       consumes:
         - application/json
       produces:
@@ -115,7 +115,7 @@ paths:
     post:
       tags:
         - Deployment
-      description: 'Install the app with the yaml file, which is passed to the body'
+      description: 'Install an app with yaml file, which is passed to body'
       consumes:
         - application/json
       produces:
@@ -135,7 +135,7 @@ paths:
           headers:
             location:
               description: >-
-                URI pointing to the location of the newly deployed App, e.g.
+                URI pointing to location of the newly deployed App, e.g.
                 http://192.168.0.10:5000/api/v1/edge/apps/{app_id}
               type: string
           schema:
@@ -163,7 +163,7 @@ paths:
     post:
       tags:
         - Deployment
-      description: Update the yaml file of the specified app.
+      description: Update YAML file of the specified app.
       consumes:
         - application/json
       produces:
@@ -227,7 +227,7 @@ paths:
       tags:
         - Deployment
       description: |
-        STart the app specified by {app_id}
+        Start the app specified by {app_id}
       consumes:
         - application/json
       produces:
@@ -264,7 +264,7 @@ definitions:
     description: OS information of edge device where Pharos Node exists
     example: Linux 4.10.0-42-generic x86_64
   processor_model_name:
-    description: The processor model name of the edge device where the Pharos Node exists
+    description: The processor model name of an edge device where Pharos Node exists
     example: Intel(R) Core(TM) i7-4790 CPU @ 3.60GHz
   cpu:
     description: Information about cpu usage of edge device where Pharos Node exists
@@ -325,7 +325,7 @@ definitions:
     properties:
       interval:
         type: string
-        description: The minute is a unit of time
+        description: Time unit is minutes
         example: 5
   registration:
     required:
