Fix a path of configuration.json file
Signed-off-by: Jihun Ha <jihun.ha@samsung.com>

--- a/Dockerfile_arm64
+++ b/Dockerfile_arm64
@@ -26,7 +26,8 @@ ENV APP_PORT=48098
 ENV APP=pharos-node
 
 #copy files
-COPY $APP run.sh $APP_DIR/
+COPY $APP run.sh $APP_DIR
+COPY src/controller/configuration/configuration.json /configuration.json
 
 #expose notifications port
 EXPOSE $APP_PORT
