--- a/doc/pharos_node_api.yaml
+++ b/doc/pharos_node_api.yaml
@@ -246,13 +246,13 @@ paths:
         '200':
           description: Application stop succeeds
 definitions:
-  CPU:
+  cpu:
     description: Information about cpu usage of edge device where Pharos Node exists
     example: ["8.00%", "3.03%", "7.07%", "16.16%", "9.90%", "18.00%", "11.22%", "4.12%"]
-  MEM:
+  mem:
     description: Information about memory usage of edge device where Pharos Node exists
     example: {"Free":"0KB", "Total":"0KB", "Used":"0KB", "UsedPercnet":"0%"}
-  DISK:
+  disk:
     description: Information about disk usage of edge device where Pharos Node exists
     example: [{"Free":"0G", "Path":"/root", "Total":"0G", "Used":"0G", "UsedPercent":"0%"}]
   id:
@@ -338,13 +338,13 @@ definitions:
           $ref: '#/definitions/response_of_get_app'
   response_of_resource:
     required:
-      - CPU
-      - MEM
-      - DISK
+      - cpu
+      - mem
+      - disk
     properties:
-      CPU:
-        $ref: '#/definitions/CPU'
-      MEM:
-        $ref: '#/definitions/MEM'
-      DISK:
-        $ref: '#/definitions/DISK'
+      cpu:
+        $ref: '#/definitions/cpu'
+      mem:
+        $ref: '#/definitions/mem'
+      disk:
+        $ref: '#/definitions/disk'
