--- a/Dockerfile_arm
+++ b/Dockerfile_arm
@@ -15,16 +15,18 @@
 #
 ###############################################################################
 # Docker image for "pharos-node"
-FROM armhf/ubuntu:16.10
+FROM arm32v7/ubuntu:16.04
 
 # environment variables
 ENV APP_DIR=/pharos
 ENV APP_PORT=48098
 ENV APP=pharos-node
 
+RUN apt-get update
+RUN apt-get install -y mongodb
+
 #copy files
 COPY $APP run.sh $APP_DIR/
-COPY src/controller/configuration/configuration.json /configuration.json
 
 #expose notifications port
 EXPOSE $APP_PORT
