updated a description of configuration api
Signed-off-by: hyuna0213.jo <hyuna0213.jo@samsung.com>

--- a/doc/pharos_node_api.yaml
+++ b/doc/pharos_node_api.yaml
@@ -351,8 +351,8 @@ definitions:
       properties:
         type: array
         example:
-          - {"name":"devicename", "value":"EdgeDevice"}
-          - {"name":"pinginterval", "value":"10"}
+          - {"devicename":"EdgeDevice"}
+          - {"pinginterval":"10"}
   response_of_deployment:
     required:
       - id
@@ -399,10 +399,10 @@ definitions:
       properties:
         type: array
         example:
-          - {"name":"anchoraddress", "value":"192.168.0.1", "policy":["readable"]}
-          - {"name":"nodeaddress", "value":"192.168.0.1", "policy":["readable"]}
-          - {"name":"devicename", "value":"EdgeDevice", "policy":["readable", "writable"]}
-          - {"name":"pinginterval", "value":"10", "policy":["readable", "writable"]}
-          - {"name":"os", "value":"linux", "policy":["readable"]}
-          - {"name":"platform", "value":{"family":"debian","platform":"ubuntu","version":"14.04"}, "policy":["readable"]}
-          - {"name":"processor", "value":[{"cpu":"0", "modelname":"Intel(R) Core(TM) i7-2600 CPU @ 3.40GHz"}], "policy":["readable"]}
+          - {"anchoraddress":"192.168.0.1", "policy":["readable"]}
+          - {"nodeaddress":"192.168.0.1", "policy":["readable"]}
+          - {"devicename":"EdgeDevice", "policy":["readable", "writable"]}
+          - {"pinginterval":"10", "policy":["readable", "writable"]}
+          - {"os":"linux", "policy":["readable"]}
+          - {"platform":{"family":"debian","platform":"ubuntu","version":"14.04"}, "policy":["readable"]}
+          - {"processor":[{"cpu":"0", "modelname":"Intel(R) Core(TM) i7-2600 CPU @ 3.40GHz"}], "policy":["readable"]}
