--- a/doc/pharos_node_api.yaml
+++ b/doc/pharos_node_api.yaml
@@ -399,10 +399,10 @@ definitions:
       properties:
         type: array
         example:
-          - {"anchoraddress":"192.168.0.1", "policy":["readable"]}
-          - {"nodeaddress":"192.168.0.1", "policy":["readable"]}
-          - {"devicename":"EdgeDevice", "policy":["readable", "writable"]}
-          - {"pinginterval":"10", "policy":["readable", "writable"]}
-          - {"os":"linux", "policy":["readable"]}
-          - {"platform":{"family":"debian","platform":"ubuntu","version":"14.04"}, "policy":["readable"]}
-          - {"processor":[{"cpu":"0", "modelname":"Intel(R) Core(TM) i7-2600 CPU @ 3.40GHz"}], "policy":["readable"]}
+          - {"anchoraddress":"192.168.0.1", "readOnly":true}
+          - {"nodeaddress":"192.168.0.1", "readOnly":true}
+          - {"devicename":"EdgeDevice", "readOnly":false}
+          - {"pinginterval":"10", "readOnly":false}
+          - {"os":"linux", "readOnly":true}
+          - {"platform":{"family":"debian","platform":"ubuntu","version":"14.04"}, "readOnly":true}
+          - {"processor":[{"cpu":"0", "modelname":"Intel(R) Core(TM) i7-2600 CPU @ 3.40GHz"}], "readOnly":true}
