--- a/doc/pharos_node_api.yaml
+++ b/doc/pharos_node_api.yaml
@@ -124,7 +124,7 @@ paths:
             location:
               description: >-
                 URI pointing to location of the newly deployed App, e.g.
-                http://192.168.0.10:5000/api/v1/edge/apps/{app_id}
+                http://192.168.0.10:5000/api/v1/management/apps/{app_id}
               type: string
           schema:
             $ref: '#/definitions/response_of_deployment'
@@ -364,14 +364,24 @@ definitions:
       - id
       - state
       - description
+      - images
+      - services
     properties:
       id:
         $ref: '#/definitions/id'
       state:
         type: string
-        example: start
+        example: running
       description:
         $ref: '#/definitions/docker-compose'
+      images:
+        type: array
+        example:
+          - {"name":"docker image repository"}
+      services:
+        type: array
+        example:
+          - {"name":"container name", "ports":[], "state":{"exitcode": "0","status": "running"}}
   response_of_app_list:
     required:
       - apps
