Update swagger yaml file.
Signed-off-by: Parkhi <h_w.park@samsung.com>

--- a/doc/pharos_node_api.yaml
+++ b/doc/pharos_node_api.yaml
@@ -381,7 +381,7 @@ definitions:
       services:
         type: array
         example:
-          - {"name":"container name", "ports":[], "state":{"exitcode": "0","status": "running"}}
+          - {"name":"container name", "cid":"container ID", "ports":[], "state":{"exitcode": "0","status": "running"}}
   response_of_app_list:
     required:
       - apps
