Edit yaml for modified resource API's response format.
Signed-off-by: Heejung Kim <hjnari.kim@samsung.net>

--- a/doc/pharos_node_api.yaml
+++ b/doc/pharos_node_api.yaml
@@ -31,8 +31,7 @@ paths:
       tags:
         - InfoCollecting
       description: >-
-        Returns device information (os, processor model name,
-        cpu/memory/disk usage).
+        Returns device information (cpu/memory/disk/network usage).
       consumes:
         - application/json
       produces:
