--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       - NODE_ADDRESS=127.0.0.1 # Change it to actual Node's address
     networks:
       - proxy
+      - default
 
 networks:
   proxy:
