Divide docker-compose file for specific usages
docker-compose.yaml: file without traefik
docker-compose-with-traefik.yaml
 - file describing pharos node and traefik, together
docker-compose-for-traefik.yaml
 - file describing pharos node with consideration of external traefik
   Assuming that Traefik service is already running, indivisually.

Signed-off-by: Jihun Ha <jihun.ha@samsung.com>

--- a/docker-compose-for-traefik.yaml
+++ b/docker-compose-for-traefik.yaml
@@ -4,12 +4,19 @@ version: '2'
 services:
   node:
     image: system-pharos-node-go
-    ports:
-      - "48098:48098"
     container_name: node
     volumes:       
       - /var/run/docker.sock:/var/run/docker.sock
       - ~/pharos-node/data/db:/data/db
+    labels:
+      - "traefik.frontend.rule=PathPrefixStrip: /pharos-node"
+      - "traefik.port=48098"
     environment:
       - ANCHOR_ADDRESS=127.0.0.1 # Change it to actual Anchor's address
       - NODE_ADDRESS=127.0.0.1 # Change it to actual Node's address
+    networks:
+      - proxy
+
+networks:
+  proxy:
+    external: true
