Edit container_name field in docker-compose-with-traefik.yaml
Signed-off-by: Heejung Kim <hjnari.kim@samsung.net>

--- a/docker-compose-with-traefik.yaml
+++ b/docker-compose-with-traefik.yaml
@@ -15,7 +15,7 @@ services:
 
   node:
     image: system-pharos-node-go
-    container_name: node
+    container_name: pharos-node
     volumes:       
       - /var/run/docker.sock:/var/run/docker.sock
       - ~/pharos-node/data/db:/data/db
