Add environment variables and edit container_name in docker-compose-for-traefik.yaml
Signed-off-by: Heejung Kim <hjnari.kim@samsung.net>

--- a/docker-compose-for-traefik.yaml
+++ b/docker-compose-for-traefik.yaml
@@ -4,7 +4,7 @@ version: '2'
 services:
   node:
     image: system-pharos-node-go
-    container_name: node
+    container_name: pharos-node
     volumes:       
       - /var/run/docker.sock:/var/run/docker.sock
       - ~/pharos-node/data/db:/data/db
@@ -14,6 +14,8 @@ services:
     environment:
       - ANCHOR_ADDRESS=127.0.0.1 # Change it to actual Anchor's address
       - NODE_ADDRESS=127.0.0.1 # Change it to actual Node's address
+      - REVERSE_PROXY=true # Change it to false if Node is not behind reverse proxy
+      - ANCHOR_REVERSE_PROXY=true # Change it to false if Anchor is not behind reverse proxy
     networks:
       - proxy
 
