--- a/doc/pharos_node_api.yaml
+++ b/doc/pharos_node_api.yaml
@@ -452,3 +452,4 @@ definitions:
           - {"os":"linux", "readOnly":true}
           - {"platform":"Ubuntu 16.04.3 LTS", "readOnly":true}
           - {"processor":[{"cpu":"0", "modelname":"Intel(R) Core(TM) i7-2600 CPU @ 3.40GHz"}], "readOnly":true}
+          - {"nodeid":"0000000000000000000000", "readOnly":true}
